test/invalid/unknown_function.py
# Unknown function call
def main() -> None:
    x: int = unknown_func()  # unknown_func is undefined
